# ShunFengParcel/api/helloworld/v1/order_http.pb.go
@@ -1,0 +1,81 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.0
+// - protoc             v3.21.11
+// source: api/helloworld/v1/order.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationOrderAddOrder = "/stream.Order/AddOrder"
+
+type OrderHTTPServer interface {
+	// AddOrder Sends a greeting
+	AddOrder(context.Context, *AddOrderReq) (*AddOrderResp, error)
+}
+
+func RegisterOrderHTTPServer(s *http.Server, srv OrderHTTPServer) {
+	r := s.Route("/")
+	r.POST("addorder", _Order_AddOrder0_HTTP_Handler(srv))
+}
+
+func _Order_AddOrder0_HTTP_Handler(srv OrderHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AddOrderReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationOrderAddOrder)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AddOrder(ctx, req.(*AddOrderReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AddOrderResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+type OrderHTTPClient interface {
+	// AddOrder Sends a greeting
+	AddOrder(ctx context.Context, req *AddOrderReq, opts ...http.CallOption) (rsp *AddOrderResp, err error)
+}
+
+type OrderHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewOrderHTTPClient(client *http.Client) OrderHTTPClient {
+	return &OrderHTTPClientImpl{client}
+}
+
+// AddOrder Sends a greeting
+func (c *OrderHTTPClientImpl) AddOrder(ctx context.Context, in *AddOrderReq, opts ...http.CallOption) (*AddOrderResp, error) {
+	var out AddOrderResp
+	pattern := "addorder"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationOrderAddOrder))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
